Klausurplan: Stufe zu Nachschreibterminen hinzugefügt, API-Bugfixes